--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: JPacman CI with Gradle
+name: JPacman CI with Gradle2
 
 on:
   push:
@@ -29,8 +29,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+        
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+      
     - name: Build with Gradle
       run: xvfb-run ./gradlew build
     
